# code-search-toy

./: .gitmodules  Cargo.toml  build.rs
language-gen/: Cargo.toml
language-gen/src/: main.rs
src/: error.rs  main.rs
src/analysis/: java.rs  mod.rs  ts_analyzer.rs
src/indexer/: indexer.rs  mod.rs
src/languages/: mod.rs
src/reader/: mod.rs
