[package]
name = "try-tree-sitter"
version = "0.1.0"
authors = ["spacedragon <spacedragon@me.com>"]
edition = "2018"

[dependencies]
tree-sitter = "0.16.1"
async-std = "1.6.2"
clap = "3.0.0-beta.1"
walkdir = "2.3.1"
rayon = "1.3.1"
anyhow = "1.0.31"
ignore = "0.4.16"
tracing = "0.1.16"
tracing-subscriber = "0.2.7"
tantivy = "0.12.0"
phf = "0.8.0"
rust-code-analysis = { path = "./rust-code-analysis" }
